<resources>
    <string name="app_name">MiBolsillo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="iniciar_sesion">Inicar Sesión</string>
    <string name="nombre">Nombre</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="pass_confirm">Repita Password</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="genero">Género</string>
    <string name="registro">Registro</string>
    <string name="registrarme">Registrarme</string>
    <string name="telefono">Teléfono</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_cerrar_sesion">Cerrar Sesión</string>
    <string name="login_fail">Mail o password incorrectos.</string>
    <string name="network_error">Error de comunicación.</string>
    <string name="categorias">Categorías</string>
    <string name="gastos">Gastos</string>
    <string name="mis_datos">Mis Datos</string>
    <string name="title_activity_sms_token">SmsTokenActivity</string>
</resources>
