<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginHorizontal="15dp"
        android:hint="@string/nombre"
        />
    <EditText
        android:id="@+id/txtMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginHorizontal="15dp"
        android:hint="@string/email"
        />
    <EditText
        android:id="@+id/txtTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginHorizontal="15dp"
        android:inputType="phone"
        android:hint="@string/telefono"
        />
    <EditText
        android:id="@+id/txtPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:padding="15dp"
        android:layout_marginHorizontal="15dp"
        android:inputType="textPassword"
        />
    <EditText
        android:id="@+id/txtPassConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pass_confirm"
        android:padding="15dp"
        android:layout_marginHorizontal="15dp"
        android:inputType="textPassword"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="20dp">
            <RadioButton
                android:id="@+id/rdMasculino"
                android:onClick="generoClicked"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/masculino"
                android:checked="true"/>
            <RadioButton
                android:id="@+id/rdFemenino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/femenino"
                android:onClick="generoClicked"/>
        </RadioGroup>
    </LinearLayout>
    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/registrarme"
        android:onClick="registrarUsuario"/>

</LinearLayout>